flex-panel img optimizitaion and styles fix for better layout processing (flex wrap and shrink)

--- a/src/main.css
+++ b/src/main.css
@@ -468,18 +468,24 @@ nav {
 .flex-panels {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+    flex: 10 0 0;
+    height: auto;
     min-height: 100vh;
     background-color: var(--darkbg);
     box-shadow: inset 0 0 4rem var(--mid-glow);
 }
 .panels {
-    display: flex;
-    flex: 1;
     overflow: hidden;
+    display: flex;
+    flex: 10 0 0;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 .panel {
     display: flex;
-    flex: 3;
+    flex: 10 0 0;
+    min-width: 30vw;
     position: relative;
     flex-direction: column;
     justify-content: center;
@@ -496,25 +502,26 @@ nav {
     text-transform: uppercase;
     text-shadow: 0 0 .4rem var(--max-darken);
     transition:
-        font-size 250ms cubic-bezier(0, 1.8, .5, 1),
-        flex 500ms cubic-bezier(0, 1.8, .5, 1),
-        background 500ms cubic-bezier(0, 1.8, .5, 1),
-        box-shadow 250ms ease-in-out,
-        opacity 500ms cubic-bezier(0, 0, .5, 1),
+        font-size 250ms cubic-bezier(0, 1, .5, 1),
+        flex 500ms cubic-bezier(0, 1, .5, 1),
+        background 500ms cubic-bezier(0, 1, .5, 1),
+        transform 500ms cubic-bezier(0, 1, .5, 1),
+        opacity 150ms ease-in-out,
+        box-shadow 150ms ease-in-out,
         blur 250ms ease-in-out;
 }
 
-.panel1 {background-image: url(../src/images/books.webp);}
-.panel2 { background-image: url(../src/images/space.jpeg);}
-.panel3 {background-image: url(../src/images/hologram.jpeg);}
-.panel4 {background-image: url(../src/images/super.jpeg);}
+.panel1 {background-image: url(../src/images/books.jpg);}
+.panel2 { background-image: url(../src/images/space.jpg);}
+.panel3 {background-image: url(../src/images/hologram.jpg);}
+.panel4 {background-image: url(../src/images/super.jpg);}
 .panel5 { background-image: url(../src/images/cool.jpg);}
-.panel6 {background-image: url(../src/images/roboarm.jpeg);}
+.panel6 {background-image: url(../src/images/roboarm.jpg);}
 
 .panel >* {
     display: flex;
     width: 100%;
-    flex: 1;
+    flex: 10 0 0;
     flex-direction: column;
     justify-content:center;
     align-items: center;
@@ -524,13 +531,13 @@ nav {
 .panel:hover{
     opacity: 1;
     filter: blur(0);
-    /* box-shadow: inset 0 0 2rem var(--low-glow); */
+    box-shadow: inset 0 0 2rem var(--low-darken);
 }
 
-.panel > *:first-child {transform: translateY(-100%); opacity:0;}
-.panel > *:last-child {transform: translateY(100%); opacity:0;}
-.panel.active > *:first-child, .panel.active > *:last-child { transform: translateY(0); opacity:.5;}
-.panel.open {flex-grow: 5; font-size: 2.5rem; filter: blur(0);}
+.panel > *:first-child {transform: translateY(-50%); opacity:0;}
+.panel > *:last-child {transform: translateY(50%); opacity:0;}
+.panel.active > *:first-child, .panel.active > *:last-child { transform: translateY(0); opacity:.8;}
+.panel.open {flex: 15 0 0; font-size: 2.5rem; filter: blur(0);}
 
 /* Counter styles */
 
